--- a/dirRath.html
+++ b/dirRath.html
@@ -779,6 +779,19 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Brock &#38;  Blade Barbers</b></p>
+						<p class="card-text">16a Main Street, Rathdrum, Co. Wicklow, A67 N289</p>
+						<p class="card-text"><a href="tel:+353838253754" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 825 3754 <i>(No txts)</i></p>
+						<a href="https://booksy.com/en-ie/16778_brock-blade_barbers_52892_leinster?do=invite&_branch_match_id=1428686388941773899&utm_medium=profile_share_from_profile&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXT07J0UvKz88urtRLzs%2FVNw5IrAo0zQ30CE%2ByrytKTUstKsrMS49PKsovL04tsnXOKMrPTQUAfRSozzwAAAA%3D" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/groups/245208359020984/user/100056212487348/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/brock_and_blade/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
+					</div>
+				</div>
+      </div>  <!-- End card deck x 3 -->
+	  
+			<div class="card-deck" style="padding: 0.5rem;">
+		  	<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Naura Hair &#38; Beauty</b></p>
 						<p class="card-text">Saville House, Corballis Upper, Rathdrum, Co. Wicklow, A67 HE98</p>
 						<p class="card-text"><a href="tel:+353851628547" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 162 8547</p>
@@ -787,9 +800,6 @@
 						<a href="https://www.instagram.com/naurasalonirl/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-      </div>  <!-- End card deck x 3 -->
-	  
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Barber 13</b><br><i>(Vape 13)</i></p>
@@ -808,6 +818,10 @@
 						<a href="https://www.instagram.com/kingstown_turkishbarber" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+
+			</div>  <!-- End card deck x 3 -->
+	  
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Brows 2 You</b></p>
@@ -817,9 +831,6 @@
 						<a href="https://www.instagram.com/brows2yourathdrum/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-			</div>  <!-- End card deck x 3 -->
-	  
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Nails by Rebecca</b></p>
@@ -839,8 +850,6 @@
 						<a href="https://www.facebook.com/dsenhanced.aesthetic" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/dsenhancedaesthetic/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 			</div>  <!-- End card deck x 3 -->
 		</div>  <!-- End Section hair and beauty -->
