--- a/newsRath.html
+++ b/newsRath.html
@@ -189,23 +189,23 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<img class="card-img-top" src="images/2025_offroad.jpg" alt="offroad">
+							<img class="card-img-top" src="images/2025_coffee.jpg" alt="coffee">
+							<p class="card-text"><b>Wicklow Hospice Coffee Morning</b></p>
+							<p class="card-text">Thursday 25 September 2025, Avondale Sports 10am-12pm</p>
+							<a href="https://www.hospicecoffeemorning.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							
+						</div>
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<p class="card-text"><b>Rathdrum Offroad Grass Track Event</b></p>
-							<p class="card-text">Saturday 27 September 2025</p>
+							<p class="card-text">Sunday 28 September 2025</p>
 							<p class="card-text"><a href="tel:+353863850191" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 385 0191</p>
 							<p class="card-text"><a href="mailto:rathdrumoffroadclub@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumoffroadclub@gmail.com</p>
-							<a href="https://worevents.com/events/details/the-rathdrum-wor-events-hare-n-hounds-enduro" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.facebook.com/profile.php?id=100057628351851" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-					<div class="card bg-dark text-white">					
-						<div class="card-body">
-							<img class="card-img-top" src="images/2025_samarathans.jpg" alt="samaritans">
-							<p class="card-text"><b>Hand of Friendship Walk</b></p>
-							<p class="card-text">Sunday 28 September 2025 at noon</p>
-							<p class="card-text"><a href="mailto:adminireland@samaritans.org" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: adminireland@samaritans.org</p>
-						</div>
-					</div>
+
 				</div>        <!-- End card deck x 3 -->  
 
 				<div class="card-deck" style="padding: 0.5rem;">
@@ -228,6 +228,17 @@
 							<a href="https://www.facebook.com/parnellsummerschool/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->
+
+				<div class="card-deck" style="padding: 0.5rem;">
+					<div class="card bg-dark text-white">					
+						<div class="card-body">
+							<img class="card-img-top" src="images/2025_samarathans.jpg" alt="samaritans">
+							<p class="card-text"><b>Hand of Friendship Walk</b></p>
+							<p class="card-text">Sunday 28 September 2025 at noon</p>
+							<p class="card-text"><a href="mailto:adminireland@samaritans.org" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: adminireland@samaritans.org</p>
+						</div>
+					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_harvest_festival.jpg" alt="VintageHarvestFeteDay">
@@ -235,9 +246,6 @@
 							<p class="card-text">5 October 2025</p>
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 -->
-
-				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_PumpkinPatch.jpeg" alt="PumpkinPatch">					
@@ -263,6 +271,10 @@
 							<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
+
+				</div>        <!-- End card deck x 3 -->
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_MonsterMash.jpg" alt="MonsterMash">
@@ -275,7 +287,12 @@
 							<a href="https://www.instagram.com/hiddenvalleyireland/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 -->
+					<div class="card border-0">
+					</div>
+					<div class="card border-0">
+					</div>
+				</div>
+
 			</div> <!-- End section -->
 		
 			<!--Spacer -->
