--- a/dirRath.html
+++ b/dirRath.html
@@ -739,10 +739,11 @@
 						<p class="card-text">Unit P10, Arklow Business Enterprise Centre, Kilbride Industrial Estate, Arklow, Co. Wicklow, Y14 RX57</p>
 						<p class="card-text"><a href="tel:+353894932467" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel Audrey: 089 493 2467</p>
 						<p class="card-text"><a href="tel:+353868549895" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel Michelle: 086 854 9895</p>
-						<p class="card-text"><a href="mailto:info@allaboutweddings.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@allaboutweddings.ie</p>
+						<p class="card-text"><a href="mailto:audrey@allaboutweddings.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: audrey@allaboutweddings.ie</p>
 						<a href="https://www.allaboutweddingsireland.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/allaboutweddings.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/allaboutweddingsireland/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp; 
+						<a href="https://www.tiktok.com/@allaboutweddingsireland" target="_blank"><i class="fa-brands fa-tiktok" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
 	  	  <div class="card border-0">
