--- a/newsRath.html
+++ b/newsRath.html
@@ -208,6 +208,25 @@
 				</div>        <!-- End card deck x 3 -->  
 
 				<div class="card-deck" style="padding: 0.5rem;">
+					<div class="card bg-dark text-white">					
+						<div class="card-body">
+							<img class="card-img-top" src="images/2025_samarathans.jpg" alt="samaritans">
+							<p class="card-text"><b>Hand of Friendship Walk</b></p>
+							<p class="card-text">Sunday 28 September 2025 at noon</p>
+							<p class="card-text"><a href="mailto:adminireland@samaritans.org" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: adminireland@samaritans.org</p>
+						</div>
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
+							<img class="card-img-top" src="images/2025_parishwalk.jpg" alt="ParishWalk">
+							<p class="card-text"><b>Rathdrum Parish Walk</b></p>
+							<p class="card-text">Sunday 28 September 2025 at 2pm</p>
+							<p class="card-text"><a href="tel:+35340443390" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43390</p>
+							<p class="card-text"><a href="mailto:rathdrumparish@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumparish@gmail.com</p>
+							<a href="http://rathdrumparish.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/rathdrumparish.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>				
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_alzheimer.jpg" alt="alzheimer">			
@@ -217,6 +236,9 @@
 							<a href="https://alzheimer.ie/location/arklow-social-club-2/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->
+
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_parnell.jpg" alt="ParnellSymposium">
@@ -227,18 +249,6 @@
 							<a href="https://www.facebook.com/parnellsummerschool/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
-					<div class="card bg-dark text-white">					
-						<div class="card-body">
-							<img class="card-img-top" src="images/2025_samarathans.jpg" alt="samaritans">
-							<p class="card-text"><b>Hand of Friendship Walk</b></p>
-							<p class="card-text">Sunday 28 September 2025 at noon</p>
-							<p class="card-text"><a href="mailto:adminireland@samaritans.org" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: adminireland@samaritans.org</p>
-						</div>
-					</div>
-				</div>        <!-- End card deck x 3 -->
-
-				<div class="card-deck" style="padding: 0.5rem;">
-
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_harvest_festival.jpg" alt="VintageHarvestFeteDay">
@@ -246,6 +256,17 @@
 							<p class="card-text">5 October 2025</p>
 						</div>
 					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
+						  <img class="card-img-top" src="images/2025_historical.jpg" alt="HistoricalTalk">
+							<p class="card-text"><b>Rathdrum Historical Society</b></p>
+							<p class="card-text">6 October 2025</p>
+							<a href="https://www.facebook.com/RathdrumHistoricalSociety/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>
+				</div>        <!-- End card deck x 3 -->
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_PumpkinPatch.jpeg" alt="PumpkinPatch">					
@@ -271,10 +292,6 @@
 							<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
-
-				</div>        <!-- End card deck x 3 -->
-				
-				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_MonsterMash.jpg" alt="MonsterMash">
@@ -286,10 +303,6 @@
 							<a href="https://www.facebook.com/hiddenvalleyholidayresort" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.instagram.com/hiddenvalleyireland/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
-					</div>
-					<div class="card border-0">
-					</div>
-					<div class="card border-0">
 					</div>
 				</div>
 
