--- a/actRath.html
+++ b/actRath.html
@@ -377,7 +377,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Murphy Academy of Drama</b></p>
-						<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
+						<p class="card-text"><i>Ballinaclash Community Hall, The Old School, Ballinacarrig Lower, Rathdrum, Co. Wicklow, A67 HY24</i></p>
 						<p class="card-text"><a href="mailto:mad.drama.school@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: mad.drama.school@gmail.com</p>
 						<a href="https://www.facebook.com/maddramaschool/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/mad_performingarts/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
@@ -594,7 +594,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Murphy Academy of Drama</b><br><i>Summer Camp</i></p>
-						<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
+						<p class="card-text"><i>Ballinaclash Community Hall, The Old School, Ballinacarrig Lower, Rathdrum, Co. Wicklow, A67 HY24</i></p>
 						<p class="card-text"><a href="mailto:mad.drama.school@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: mad.drama.school@gmail.com</p>
 						<a href="https://www.facebook.com/maddramaschool/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/mad_performingarts/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
