--- a/commRath.html
+++ b/commRath.html
@@ -95,7 +95,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Historical Society</b></p>
-						<p class="card-text"><i>The Ann Devlin Annex, Rathdrum, Co. Wicklow, A67 YC93</i></p>
+						<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
 						<a href="https://www.facebook.com/RathdrumHistoricalSociety/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
