--- a/newsRath.html
+++ b/newsRath.html
@@ -197,8 +197,9 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+							<img class="card-img-top" src="images/2025_offroad.jpg" alt="offroad">
 							<p class="card-text"><b>Rathdrum Offroad Grass Track Event</b></p>
-							<p class="card-text">Sunday 28 September 2025</p>
+							<p class="card-text">Saturday 27 &#38; Sunday 28 September 2025</p>
 							<p class="card-text"><a href="tel:+353863850191" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 385 0191</p>
 							<p class="card-text"><a href="mailto:rathdrumoffroadclub@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumoffroadclub@gmail.com</p>
 							<a href="https://www.facebook.com/profile.php?id=100057628351851" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -243,7 +244,7 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_parnell.jpg" alt="ParnellSymposium">
 							<p class="card-text"><b>The Parnell Society - Parnell Ivy Day Symposium</b><br>Marking the 150th anniversary of Parnell’s first election to Parliament (and the 250th of O’Connell’s birth), the theme of the symposium will be Elections & Electoral Politics past and present.</p>
-							<p class="card-text">4 - 5 October at Avondale and Glasnevin</p>						
+							<p class="card-text">Saturday 4 - Sunday 5 October at Avondale and Glasnevin</p>						
 							<a href="https://www.facebook.com/photo?fbid=1172411851578868&set=a.552399893580070" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://x.com/ParnellSS?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.facebook.com/parnellsummerschool/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -253,14 +254,14 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_harvest_festival.jpg" alt="VintageHarvestFeteDay">
 							<p class="card-text"><b>Vintage Harvest Fete Day</b></p>
-							<p class="card-text">5 October 2025</p>
+							<p class="card-text">Sunday 5 October 2025</p>
 						</div>
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 						  <img class="card-img-top" src="images/2025_historical.jpg" alt="HistoricalTalk">
 							<p class="card-text"><b>Rathdrum Historical Society</b></p>
-							<p class="card-text">6 October 2025</p>
+							<p class="card-text">Monday 6 October 2025</p>
 							<a href="https://www.facebook.com/RathdrumHistoricalSociety/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>
@@ -271,7 +272,8 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_PumpkinPatch.jpeg" alt="PumpkinPatch">					
 							<p class="card-text"><b>Clissmann Pumpkin Patch</b></p>
-							<p class="card-text">4 October - 31 October 2025</p>
+							<p class="card-text">Saturday 4 October - Friday 31 October 2025</p>
+							<p class="card-text">Cronybyrne, Rathdrum, Co. Wicklow, A67 YP82</p>
 							<p class="card-text"><a href="tel:+35340446920" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46920</p>
 							<p class="card-text"><a href="mailto:info@clissmannhorsecaravans.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@clissmannhorsecaravans.com</p>
 							<a href="https://clissmannhorsecaravans.com/halloween-pumpkin-patch/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -283,7 +285,7 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_AvondaleHalloween.jpg" alt="AvondaleHalloween">
 							<p class="card-text"><b>Spooktacular Halloween Week</b></p>
-							<p class="card-text">25 October – 1 November</p>
+							<p class="card-text">Saturday 25 October – Saturday 1 November</p>
 							<p class="card-text">Avondale Forest Park, Rathdrum, Co. Wicklow, A67 P303</p>
 							<p class="card-text"><a href="tel:+35340446111" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46111</p>
 							<p class="card-text"><a href="mailto:enquiry@beyondthetreesavondale.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: enquiry@beyondthetreesavondale.com</p>
@@ -296,7 +298,8 @@
 						<div class="card-body">
 							<img class="card-img-top" src="images/2025_MonsterMash.jpg" alt="MonsterMash">
 							<p class="card-text"><b>Hidden Valley Resort - Halloween Event</b></p>
-							<p class="card-text">25 October - 1 November</p>
+							<p class="card-text">Saturday 25 October - Saturday 1 November</p>
+							<p class="card-text">Rathdrum, Co. Wicklow, A67 XY56</p>
 							<p class="card-text"><a href="tel:+353867272872" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: +353 86 7272 872</p>
 							<p class="card-text"><a href="mailto:info@irelandholidaypark.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@irelandholidaypark.com</p>
 							<a href="https://www.hiddenvalley.ie/halloween-monster-mash/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -553,7 +556,20 @@
 							<p class="card-text">Last week in November (Date not confirmed for 2025 as yet)</p>
 							<a href="https://www.facebook.com/rathdrumchristmaslight" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
-					</div> 
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
+							<img class="card-img-top" src="images/2024_hound.jpg" alt="hounddogs">
+							<p class="card-text"><b>Rathdrum RFC v The Hound Dogs Charity Rugby Match</b></p>
+							<p class="card-text">St. Stephen's Day, 1pm</p>
+							<p class="card-text">Rathdrum Rugby Football Club, The Ivy Leaf Grounds, Rathdrum, Co. Wicklow, A67 XO45</p>
+							<p class="card-text"><a href="mailto:rathdrumrugby@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumrugby@gmail.com</p>
+							<a href="https://www.rathdrumrfc.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/rathdrumrfc/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/rathdrumrugbyclub/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://x.com/RathdrumRFC" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>
+						</div>
+					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<p class="card-text"><b>Hidden Valley Resort</b><br><i>(St. Patrick's Weekend, Easter Break, Halloween Monster Mash, Christmas Island)</i></p>
@@ -564,7 +580,10 @@
 							<a href="https://www.facebook.com/hiddenvalleyholidayresort" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.instagram.com/hiddenvalleyireland/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
-					</div>
+					</div>  
+				</div>        <!-- End card deck x 3 -->
+		 
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<p class="card-text"><b>Clissmann Horse Caravans</b><br><i>(Easter Egg Hunt, Halloween Pumpkin Patch, Santa Winter Wonderland)</i></p>
@@ -575,10 +594,7 @@
 							<a href="https://www.facebook.com/clissmann.horsecaravans.glamping/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.instagram.com/clissmann_horse_caravans/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
-					</div>    
-				</div>        <!-- End card deck x 3 -->
-		 
-				<div class="card-deck" style="padding: 0.5rem;">
+					</div>  
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<p class="card-text"><b>Beyond the Trees Avondale</b><br><i>(Easter Family Fun, Spooktacular Halloween Week, Winter Night Lights, Wicklow On Ice, Summer Plays, Music in the Viewing Tower, Kids Character Visits, Outdoor Yoga Events, Smurf Village)</i></p>
@@ -597,6 +613,8 @@
 							<a href="https://www.facebook.com/groups/245208359020984" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<p class="card-text"><b>The Green Man Market</b></p>
@@ -605,6 +623,10 @@
 							<a href="https://www.facebook.com/profile.php?id=61573060422095" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 							<a href="https://www.instagram.com/thegreenmanmarket/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
+					</div>
+					<div class="card border-0">
+					</div>
+					<div class="card border-0">
 					</div>
 				</div>        <!-- End card deck x 3 -->
 			</div> <!-- end section -->
