--- a/actRath.html
+++ b/actRath.html
@@ -155,6 +155,7 @@
 						<p class="card-text"><a href="tel:+353863518258" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 351 8258</p>
 						<p class="card-text"><a href="mailto:Ciara.a.raymond@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: Ciara.a.raymond@gmail.com</p>
 						<a href="https://www.facebook.com/people/Avondale-Kickboxing-Academy/61564497045555/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					  <a href="https://www.instagram.com/avondale_kickboxing_/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>	
 				<div class="card bg-dark text-white">
@@ -445,6 +446,18 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>ET Jivers</b></p>
+						<p class="card-text"><i>Avondale GAA Club, Corballis Upper, Rathdrum, Co. Wicklow, A67 R229</i></p>
+						<a href="https://www.facebook.com/profile.php?id=61578780954954" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/et_jivers/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.tiktok.com/@et_jivers" target="_blank"><i class="fa-brands fa-tiktok" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+      </div>  <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Craft Group</b></p>
 						<p class="card-text">Ballinacor Community Park, Carriglineen, Glenmalure, Co. Wicklow, A67 WY83</p>
 						<p class="card-text"><a href="mailto:ballinacorcommunityproject@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: ballinacorcommunityproject@gmail.com</p>
@@ -453,9 +466,7 @@
 						<a href="https://www.facebook.com/ballinacorcommunityproject" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/ballinacorcommunity/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>	
-      </div>  <!-- End card deck x 3 -->
-			<div class="card-deck" style="padding: 0.5rem;">
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Wicklow Local Sports Partnership</b></p>
@@ -465,8 +476,6 @@
 						<a href="https://wicklowlsp.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/activewicklow" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 				<div class="card border-0">
 				</div>
